--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -4,62 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPDRAFT INTERFACE</title>
-        <link rel="stylesheet" href="static/main.css">
+        <link rel="stylesheet" href="static/test.css">
     </head>
-    <body class="light-theme">
+    <body class="theme">
         <h1>UPDRAFT TEST GUI</h1>
-
-        <P class="fangrid">
-            <form method="post" action="/">
-                <p>Fan 1 <input type="text" name = "fan1" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan1'][1]}}</p>
-                <p>Fan 2 <input type="text" name = "fan2" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan2'][1]}}</p>
-                <p>Fan 3 <input type="text" name = "fan3" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan3'][1]}}</p>
-                <p>Fan 4 <input type="text" name = "fan4" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan4'][1]}}</p>
-                <p>Fan 5 <input type="text" name = "fan5" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan5'][1]}}</p>
-                <p>Fan 6 <input type="text" name = "fan6" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan6'][1]}}</p>
-                <p>Fan 7 <input type="text" name = "fan7" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan7'][1]}}</p>
-                <p>Fan 8 <input type="text" name = "fan8" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan8'][1]}}</p>
-                <p>Fan 9 <input type="text" name = "fan9" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan9'][1]}}</p>
-                <p>Fan 10 <input type="text" name = "fan10" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan10'][1]}}</p>
-                <p>Fan 11 <input type="text" name = "fan11" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan11'][1]}}</p>
-                <p>Fan 12 <input type="text" name = "fan12" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan12'][1]}}</p>
-                <p>Fan 13 <input type="text" name = "fan13" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan13'][1]}}</p>
-                <p>Fan 14 <input type="text" name = "fan14" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan14'][1]}}</p>
-                <p>Fan 15 <input type="text" name = "fan15" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan15'][1]}}</p>
-                <p>Fan 16 <input type="text" name = "fan16" value = "" placeholder="Enter desierd speed"></p><p>{{data['fan16'][1]}}</p>
-                
+        <div class="gridlayout">
+            <form class="fangrid" method="post" action="/">
+                <div class="fan">
+                    <p>Fan 1</p>
+                    <input class="faninput"  type="text" name = "fan1" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan1'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 2</p>
+                    <input class="faninput"  type="text" name = "fan2" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan2'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 3</p>
+                    <input class="faninput"  type="text" name = "fan3" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan3'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 4</p>
+                    <input class="faninput"  type="text" name = "fan4" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan4'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 5</p>
+                    <input class="faninput"  type="text" name = "fan5" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan5'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 6</p>
+                    <input class="faninput"  type="text" name = "fan6" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan6'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 7</p>
+                    <input class="faninput"  type="text" name = "fan7" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan7'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 8</p>
+                    <input class="faninput"  type="text" name = "fan8" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan8'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 9</p>
+                    <input class="faninput"  type="text" name = "fan9" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan9'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 10</p>
+                    <input class="faninput"  type="text" name = "fan10" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan10'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 11</p>
+                    <input class="faninput"  type="text" name = "fan11" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan11'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 12</p>
+                    <input class="faninput"  type="text" name = "fan12" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan12'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 13</p>
+                    <input class="faninput"  type="text" name = "fan13" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan13'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 14</p>
+                    <input class="faninput"  type="text" name = "fan14" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan14'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 15</p>
+                    <input class="faninput"  type="text" name = "fan15" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan15'][1]}}</p>
+                </div>
+                <div class="fan">
+                    <p>Fan 16</p>
+                    <input class="faninput"  type="text" name = "fan16" value = "" placeholder="Enter desierd speed">
+                    <p>{{data['fan16'][1]}}</p>
+                </div>
+                                    
                 <p><input type = "submit" value="RUN FANS" name="updatefan"/></p>
             </form>
-        </P>
 
-        <form method="post" action="/">
-            <p>All Fans <input type="text" name = "ALLFANS" value = "" placeholder="Enter desierd speed"></p>
-            <p><input type = "submit" value="RUN FANS" name="updatefan"/></p>
-        </form>
 
-        <form method="post" action="/">
-            <p>Actuator Control</p>
-            <p>Direction <input type="text" name = "DIRECTION" value = "" placeholder="Enter desierd speed"></p>
-            <p>Angle <input type="text" name = "ANGLE" value = "" placeholder="Enter desierd speed"></p>
-            <p><input type = "submit" value="RUN ANGLE" name="updateactuator"/></p>
-        </form>
+            <div class="allfans">
+                <form method="post" action="/">
+                    <p>All Fans <input type="text" name = "ALLFANS" value = "" placeholder="Enter desierd speed"></p>
+                    <p><input type = "submit" value="RUN FANS" name="updatefan"/></p>
+                </form>
+            </div>
 
-        <form method="post" action="/">
-            <p>Save Setting to File</p>
-            <p>Save <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
-            <p><input type = "submit" value="SAVE CONFIG" name="savefile"/></p>
-        </form>
+            <div  class="actuator">
+                <form method="post" action="/">
+                    <p>Actuator Control</p>
+                    <p>Direction</p>
+                    <label class="toggle">
+                        <input type="checkbox">
+                        <span class="switch"></span>
+                        <span class="labels" data-on="F2B" data-off="S2S"></span>
+                    </label>
+                    
+                    <p>Angle <span id="dispangle" ></span></p>
+                    <input class="slider" type="range" min="-30" max="30" name = "ANGLE" value = "0" id="angle">
+                    <script>
+                        var slider = document.getElementById("angle");
+                        var output = document.getElementById("dispangle");
+                        output.innerHTML = slider.value;
 
-        <form method="post" action="/">
-            <p>Load Setting form File</p>
-            <p>Load <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
-            <p><input type = "submit" value="LOAD CONFIG" name="loadfile"/></p>
-        </form>
+                        slider.oninput = function() {
+                        output.innerHTML = this.value;
+}
+                    </script>
+                    <p><input type = "submit" value="RUN ANGLE" name="updateactuator"/></p>
+                </form>
+            </div>
 
-        <form method="post" action="/">
-            <p>UPDATE</p>
-            <p><input type = "submit" value="UPDATE " name="toros"/></p>
-        </form>
+            <div class="filesettings">
+                <form method="post" action="/">
+                    <p>Save Setting to File</p>
+                    <p>Save <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
+                    <p><input type = "submit" value="SAVE CONFIG" name="savefile"/></p>
+                </form>
+
+                <form method="post" action="/">
+                    <p>Load Setting form File</p>
+                    <p>Load <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
+                    <p><input type = "submit" value="LOAD CONFIG" name="loadfile"/></p>
+                </form>
+            </div>
+
+            <div class="run">
+                <form method="post" action="/">
+                    <p>UPDATE</p>
+                    <p><input type = "submit" value="UPDATE " name="toros"/></p>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
 
