--- a/WebServer/templates/website.html
+++ b/WebServer/templates/website.html
@@ -1,22 +1,13 @@
 <style>
     @import url(website.css);
     </style>
-  <div data-tabs="1" id="ivvj">
-    <nav data-tab-container="1" id="ic9j" class="tab-container">
-      <a href="#tab1" data-tab="1" id="ijtb" class="tab">Fans</a>
-      <a href="#tab2" data-tab="1" id="irdc" class="tab">Table</a>
-    </nav>
-    <div id="tab1" data-tab-content="1" class="tab-content">
-      <div data-js="data-table" id="iwhyz" class="data-table p-3 table-responsive">
-          <div id="igtkz">
-            <!--<button role="button" type="submit" class="btn btn-sm btn-primary dc-button dc-btn--blue mb-2 mr-0">Update</button> -->
+      <div data-js="data-table" id="tableAid" class="data-table p-3 table-responsive">
+          <div id="tableAdiv">
           </div>
-         <!--<button role="button" type="reset" class="btn btn-sm btn-primary dc-button dc-btn--blue mb-2 mr-0">Reset</button> -->
         <table id="if82i" class="table table-striped table-bordered table-resizable">
-          <form action="" method="get" class="form-example">
-          <div class="form-example">
-            <input type="reset" value="Reset">
-            <input type="submit" value="Update">
+          <th colspan="12">  Indoor Quadcopter Navigational Testbed</th>
+          <form action="" method="post" class="item-a">
+          <div class="item-a">
           </div>
           <tbody id="izdm9">
             <tr id="iyozf">
@@ -118,14 +109,30 @@
             </tr>
           </tbody>
         </table>
-        <button role="button" type="reset" id="i93aho" class="btn btn-sm btn-primary dc-button dc-btn--blue mb-2 mr-0">Emergency Stop</button>
+        <!-- <button role="button" type="reset" id="Reset" class="btn btn-sm btn-primary dc-button dc-btn--blue mb-2 mr-0">Reset</button>
+           
+           <button role="button" type="submit" id="Submit" class="btn btn-sm btn-primary dc-button dc-btn--blue mb-2 mr-0">Submit</button> -->
+           <label for="fans">All fans (0-100):</label>
+
+<input type="number" id="fans" name="fans"
+       min="0" max="100">
+           <input type="submit" value="Submit">
+             
+    </div>
+  </div>
+          <button role="button" type="reset" id="emergencyStop" class="emergencyStop">Emergency Stop</button>
+          <button role="button" type="submit" id="test" class="test">Update</button>
+        </div>
       </div>
     </form>
-    </div>
-    <div id="tab2" data-tab-content="1" class="tab-content">
+    
+
+
+    <form action="" method="post" class="form-example">
       <div id="iyxxm">
+        <p1>UP AND DOWN</p1>
         <fieldset class="range__field">
-          <input style = "accent-color: #FF7300" input type="range" min="0" max="30" id="iw58q4" class="range"/>
+          <input style = "accent-color: #FF7300"input type="range" min="0" max="30" id="silderA" class="range"/>
           <svg role="presentation" width="300%" height="10">
             <rect x="0%" y="3" width="1" height="10" class="range__tick">
             </rect>
@@ -257,8 +264,9 @@
         </fieldset>
       </div>
       <div id="ixar0b">
+        <p1>SIDE TO SIDE</p1>
         <fieldset class="range__field">
-          <input style = "accent-color: #FF7300" type="range" min="0" max="30" class="range" id="i7zyil"/>
+          <input style = "accent-color: #FF7300"  disabled type="range" min="0" max="30" class="range" id="sliderB"/>
           <svg role="presentation" width="300%" height="10">
             <rect x="0%" y="3" width="1" height="10" class="range__tick">
             </rect>
@@ -389,6 +397,22 @@
           </svg>
         </fieldset>
       </div>
+
+      <button onclick="enableBtnA(); return false" class = "sliderA">Enable SliderA Control</button>
+      <button onclick="enableBtnB(); return false" class = "sliderA">Enable SliderB Control</button>
+
+      <script>
+      function enableBtnA() {
+          document.getElementById("sliderB").disabled = true;
+          document.getElementById("silderA").disabled = false;
+      }
+      function enableBtnB() {
+          document.getElementById("silderA").disabled = true;
+          document.getElementById("sliderB").disabled = false;
+      }
+      </script>
+      <input type="submit" value="Update" class="right">
+
     </div>
     <div id="inqfay">
       <div class="slidecontainer">
@@ -399,173 +423,15 @@
   </div>
   <div id="im37fd">
   </div>
-  <script>var items = document.querySelectorAll('#ivvj');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e,t=this,n="[data-tab]",r="tab-active",i=document.body,o=i.matchesSelector||i.webkitMatchesSelector||i.mozMatchesSelector||i.msMatchesSelector,a=function(i){
-          var o=t.querySelectorAll(n)||[];
-          for(e=0;e<o.length;e++){
-            var a=o[e],s=a.className.replace(r,"").trim();
-            a.className=s}
-          !function(){
-            var n=t.querySelectorAll("[data-tab-content]")||[];
-            for(e=0;e<n.length;e++)n[e].style.display="none"}
-          (),i.className+=" "+r;
-          var l=i.getAttribute("href"),c=t.querySelector(l);
-          c&&(c.style.display="")}
-        ,s=t.querySelector("."+r+n);
-        (s=s||t.querySelector(n))&&a(s),t.addEventListener("click",(function(e){
-          var t=e.target;
-          o.call(t,n)&&a(t)}
-                                                                   ))}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#iwhyz');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e="",t="";
-        t=t.replaceAll("**##",'"');
-        var n=[];
-        if(t&&"undefined"!==t){
-          var r=(t=JSON.parse(t)).finders.find((function(t){
-            return t.uuid===e}
-                                               ));
-          r&&r.conditions&&r.conditions.forEach((function(e){
-            if(e.requiredExternal){
-              var t=e.query.value;
-              if(t.includes("---")){
-                var r=t.split("---");
-                n.push(r[0]),n.push(r[1])}
-              else n.push(t)}
-          }
-                                                ))}
-        var i={
-          numberPerPage:"10"};
-        i.filteredItemsUrl="collection-table/".concat("","/finder/").concat(e,"/items"),i.currentPage=1,i.dataTable=this,i.numberOfPages=0,i.finderId=e,i.collectionName="",i.fieldName="",i.externalQueryParamKeys=n;
-        var o=this.querySelector(".pagination"),a=this.querySelector(".search-form");
-        a&&a.addEventListener("submit",(function(e){
-          e.preventDefault(),searchInDataTable(i,e)}
-                                       )),"undefined"!==typeof loadDataTable&&loadDataTable(e,"",i),o&&(this.querySelector(".next").addEventListener("click",(function(e){
-          nextDataTablePage(i)}
-  )),this.querySelector(".first").addEventListener("click",(function(e){
-          firstDataTablePage(i)}
-                                                           )),this.querySelector(".last").addEventListener("click",(function(e){
-          lastDataTablePage(i)}
-                                                                                                                   )),this.querySelector(".previous").addEventListener("click",(function(e){
-          previousDataTablePage(i)}
-  )))}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#iqhpmg');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#ihn349');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#ileckx');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#ijgrxh');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#igaw6g');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#i8mxz9');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#iewr0z');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#ia1vq1');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#iiy8jb');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#ixi10u');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#igg56t');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#idppdt');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#imupej');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#i17btj');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#iilx9z');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-    var items = document.querySelectorAll('#iia0ck');
-    for (var i = 0, len = items.length; i < len; i++) {
-      (function(){
-        var e=this.tagName;
-        "undefined"!==typeof loadDynamicSelectOptions&&"SELECT"===e&&loadDynamicSelectOptions(this,"")}
-       .bind(items[i]))();
-    }
-  </script>
+</form>
+<form method="post" action="/">
+  <p>Save Setting to File</p>
+  <p>Save <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
+  <p><input type = "submit" value="SAVE CONFIG" name="savefile"/></p>
+</form>
+
+<form method="post" action="/">
+  <p>Load Setting form File</p>
+  <p>Load <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
+  <p><input type = "submit" value="LOAD CONFIG" name="loadfile"/></p>
+</form>
