--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -1,6 +1,3 @@
-<style>
-@import url(test.css);
-</style>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -10,145 +7,149 @@
         <link rel="stylesheet" href="static/test.css">
     </head>
     <body class="theme">
-        <h1>Indoor Quadcopter Navigational Testbed</h1>
+        <h1>UPDRAFT TEST GUI</h1>
         <div class="gridlayout">
-            <form class="fangrid" method="post" action="/">
+            <form class="fangrid" method="post" action="/" id="gridform">
                 <div class="fan">
                     <p>Fan 1</p>
-                    <input class="faninput"  type="text" name = "fan1" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan1" value = "" placeholder="Speed" id="fan1">
                     <p>{{data['fan1'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 2</p>
-                    <input class="faninput"  type="text" name = "fan2" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan2" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan2'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 3</p>
-                    <input class="faninput"  type="text" name = "fan3" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan3" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan3'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 4</p>
-                    <input class="faninput"  type="text" name = "fan4" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan4" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan4'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 5</p>
-                    <input class="faninput"  type="text" name = "fan5" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan5" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan5'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 6</p>
-                    <input class="faninput"  type="text" name = "fan6" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan6" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan6'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 7</p>
-                    <input class="faninput"  type="text" name = "fan7" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan7" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan7'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 8</p>
-                    <input class="faninput"  type="text" name = "fan8" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan8" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan8'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 9</p>
-                    <input class="faninput"  type="text" name = "fan9" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan9" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan9'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 10</p>
-                    <input class="faninput"  type="text" name = "fan10" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan10" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan10'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 11</p>
-                    <input class="faninput"  type="text" name = "fan11" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan11" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan11'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 12</p>
-                    <input class="faninput"  type="text" name = "fan12" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan12" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan12'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 13</p>
-                    <input class="faninput"  type="text" name = "fan13" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan13" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan13'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 14</p>
-                    <input class="faninput"  type="text" name = "fan14" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan14" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan14'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 15</p>
-                    <input class="faninput"  type="text" name = "fan15" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan15" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan15'][1]}}</p>
                 </div>
                 <div class="fan">
                     <p>Fan 16</p>
-                    <input class="faninput"  type="text" name = "fan16" value = "" placeholder="speed">
+                    <input class="faninput"  type="text" name = "fan16" value = "" placeholder="Enter desierd speed">
                     <p>{{data['fan16'][1]}}</p>
                 </div>
                                     
-                <p><input type = "submit" value="RUN FANS" name="updatefan"/></p>
             </form>
 
 
             <div class="allfans">
                 <form method="post" action="/">
-                    <p>All Fans <input class = "faninput" input type="text" name = "ALLFANS" value = "" placeholder="speed"></p>
-                    <p><input type = "submit" value="RUN FANS" name="updatefan"/></p>
+                    <p>All Fans <input type="text" name = "ALLFANS" value = "" placeholder="Enter desierd speed"></p>
+                    <p><input type = "submit" value="UPDATE ALL FANS" name="updatefan"/></p>
+                </form>
+                    <p><input type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p>
+                <form>
+                    <p><input type = "submit" value="SET FANS" name="setfan" /></p>
                 </form>
             </div>
 
-            <div  class="actuator">
+            <div class="actuator">
                 <form method="post" action="/">
-                    <h1>Actuator Control</h1>
-                    <p>Direction</p>
-                    <label class="toggle">
-                        <input type="checkbox">
-                        <span class="switch"></span>
-                        <span class="labels" data-on="F2B" data-off="S2S"></span>
-                    </label>
-                    
-                    <p>Angle <span id="dispangle" ></span></p>
-                    <input class="slider" type="range" min="-30" max="30" name = "ANGLE" value = "0" id="angle">
-                    <script>
-                        var slider = document.getElementById("angle");
-                        var output = document.getElementById("dispangle");
-                        output.innerHTML = slider.value;
+                    <p>Actuator Control</p>
+                    <div class="direction">
+                        <p>Direction : {{data['actuator'][0]}}</p>
+                        <input type="radio" name="DIRECTION" value="F2B" id="f2b">
+                        <label for="f2b">F2B</label>
+                        <input type="radio" name="DIRECTION" value="S2S" id="s2s">
+                        <label for="s2s">S2S</label>
+                    </div>
 
-                        slider.oninput = function() {
-                        output.innerHTML = this.value;
-}
-                    </script>
-                    <p><input type = "submit" value="RUN ANGLE" name="updateactuator"/></p>
+                    <div class="angle">
+                        <p>Current Angle : {{data['actuator'][1]}}</p>
+                        <p>New Angle : <span id="dispangle" ></span></p>
+                        <input class="slider" type="range" min="-30" max="30" name = "ANGLE" value = "0" id="angle">
+                        <script>
+                            var slider = document.getElementById("angle");
+                            var output = document.getElementById("dispangle");
+                            output.innerHTML = slider.value;
+
+                            slider.oninput = function() {output.innerHTML = this.value;}
+                        </script>
+                        <p><input type = "submit" value="UPDATE ANGLE" name="updateactuator"/></p>
+                    </div>
                 </form>
+                <form><p><input type = "submit" value="SET ANGLE" name="setactuator"/></p></form>
             </div>
 
             <div class="filesettings">
                 <form method="post" action="/">
                     <p>Save Setting to File</p>
-                    <p>Save <input class = "faninput" input type="text" name = "filename" value = "" placeholder="file"></p>
+                    <p>Save <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
                     <p><input type = "submit" value="SAVE CONFIG" name="savefile"/></p>
                 </form>
 
                 <form method="post" action="/">
                     <p>Load Setting form File</p>
-                    <p>Load <input class = "faninput" input type="text" name = "filename" value = "" placeholder="file"></p>
-                    
+                    <p>Load <input type="text" name = "filename" value = "" placeholder="Enter desierd speed"></p>
                     <p><input type = "submit" value="LOAD CONFIG" name="loadfile"/></p>
                 </form>
             </div>
 
             <div class="run">
                 <form method="post" action="/">
-                    <h1>UPDATE</h1>
-                    
+                    <p>UPDATE</p>
                     <p><input type = "submit" value="UPDATE " name="toros"/></p>
                 </form>
             </div>
