--- a/WebServer/static/test.css
+++ b/WebServer/static/test.css
@@ -54,9 +54,9 @@ body{
 .faninput{
         border-radius: 25px;
         border: 2px solid #Fe5c00;
-        padding: 20px;
-        width: 100px;
-        height: 10px;
+        padding: auto;
+        width: 50px;
+        height: 40px;
 }
 
 .allfans{
