--- a/WebServer/static/test.css
+++ b/WebServer/static/test.css
@@ -59,6 +59,14 @@ body{
         height: 40px;
 }
 
+.fileinput{
+    border-radius: 25px;
+    border: 2px solid #Fe5c00;
+    padding: auto;
+    width: 100px;
+    height: 50px;
+}
+
 .allfans{
     background-color: var(--boxbg);
 }
@@ -185,3 +193,48 @@ body{
 .toggle input:checked~.labels::before {
     opacity: 0;
 }
+
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #000000;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+  input.right{
+    float:right;
+    width: 200px;
+    height: 50px;
+  }
