--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -100,7 +100,7 @@
                     <p><input type = "submit" value="UPDATE ALL FANS" name="updatefan"/></p>
                 </form>
                     <p><input type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p>
-                <form>
+                <form method="post" action="/">
                     <p><input type = "submit" value="SET FANS" name="setfan" /></p>
                 </form>
             </div>
@@ -118,19 +118,19 @@
 
                     <div class="angle">
                         <p>Current Angle : {{data['actuator'][1]}}</p>
-                        <p>New Angle : <span id="dispangle" ></span></p>
-                        <input class="slider" type="range" min="-30" max="30" name = "ANGLE" value = "0" id="angle">
+                        <p>New Angle : {{actarr[2]}}</p>
+                        <input class="slider" type="range" min="-30" max="30" name = "ANGLE" value = "" id="angle">
+                        <label for="angle"><span id="dispangle" ></span></label>
                         <script>
                             var slider = document.getElementById("angle");
                             var output = document.getElementById("dispangle");
                             output.innerHTML = slider.value;
-
                             slider.oninput = function() {output.innerHTML = this.value;}
                         </script>
                         <p><input type = "submit" value="UPDATE ANGLE" name="updateactuator"/></p>
                     </div>
                 </form>
-                <form><p><input type = "submit" value="SET ANGLE" name="setactuator"/></p></form>
+                <form method="post" action="/"><p><input type = "submit" value="SET ANGLE" name="setactuator"/></p></form>
             </div>
 
             <div class="filesettings">
