--- a/WebServer/static/test.css
+++ b/WebServer/static/test.css
@@ -9,6 +9,11 @@
 h1{
     background-color: #Fe5c00;
     text-align: center;
+    font-size: 150%;
+}
+
+h2{
+    font-size: 125%;
 }
 
 .theme {
@@ -16,17 +21,19 @@ h1{
     --fontColor: var(--orange);
     --boxbg:var(--orange);
     --fancrc:var(--dark-gray);
+    --fantxt:var(--black);
     --itembg:var(--black);
+    --itemtxt:var(--light-grey);
     --itemact:var(--dark-gray);
 }
 
-.gridlayout{
+.gridlayout{ 
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 20px;
-    aspect-ratio: 1;
-   
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    grid-template-rows: repeat(auto-fill,minmax(300px,1fr));
+    margin: auto;
+    gap: 1rem;
+    max-width: 1500px;
 }
 
 body{
@@ -34,53 +41,98 @@ body{
 }
 
 .fangrid{
-    grid-area: 1 / 1 / 3 / 3;
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 2fr;
+    max-height: 2fr;
+    grid-area: span 2 / span 2 / span 2 / span 2;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    aspect-ratio: 1;
+    grid-template-columns: repeat(4, minmax(75px,1fr));
+    grid-template-rows: repeat(4, minmax(75px, 1fr));
     background-color: var(--boxbg);
-    text-align: center;
+    aspect-ratio: 1;
+    gap: 1rem;
+    padding: 1rem;
 }
 
 .fan{
     grid-area: span 1 / span 1 / span 1 / span 1;
     background-color: var(--fancrc);
-    border-color: black;
     border-radius: 50%;
     text-align: center;
-    aspect-ratio: 1;
+
+}
+
+.allfaninput{
+    border-radius: 25px;
+    border: 1% solid var(--itemact);
+    padding: 5%;
+    width: 40%;
+    height: 20%;
 }
 
 .faninput{
-        border-radius: 25px;
-        border: 2px solid #Fe5c00;
-        padding: auto;
-        width: 50px;
-        height: 40px;
+    border-radius: 25px;
+    border: 2px solid var(--itemact);
+    padding: 5%;
+    width: 50px;
+    height: 40px;
 }
 
 .fileinput{
     border-radius: 25px;
-    border: 2px solid #Fe5c00;
+    border: 2px solid var(--itemact);
     padding: auto;
     width: 100px;
     height: 50px;
 }
 
 .allfans{
+    grid-area: span 1 / span 1 / span 1 / span 1;
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 1fr;
+    max-height: 1fr;
+    grid-template-columns: repeat(2,minmax(150px,1fr));
     background-color: var(--boxbg);
+    padding: 5%;
+    text-align: center;
+
 }
 
 .actuator{
+    grid-area: span 1 / span 1 / span 1 / span 1;
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 1fr;
+    max-height: 1fr;
     background-color: var(--boxbg);
+    padding: 5%;
+    
 }
 
 .filesettings{
+    grid-area: span 1 / span 1 / span 2 / span 2;
     background-color: var(--boxbg);
+    padding: 5%;
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 1fr;
+    max-height: 2fr;
 }
 
 .run{
+    grid-area: span 1 / span 1 / span 2 / span 2;
+
+    grid-template-columns: repeat(2,minmax(150px,1fr));
+    grid-template-rows: repeat(3, minmax(100,1fr));
     background-color: var(--boxbg);
+    text-align: center;
+    padding: 5%;
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 1fr;
+    max-height: 2fr;
 }
 
 
@@ -196,17 +248,17 @@ body{
 
 .button {
     display: inline-block;
-    border-radius: 4px;
+    border-radius: 5%;
     background-color: #000000;
     border: none;
     color: #FFFFFF;
     text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    width: 200px;
+    font-size: 100%;
+    padding: 3%;
+    width: 40%;
     transition: all 0.5s;
     cursor: pointer;
-    margin: 5px;
+    margin: 1%;
   }
   
   .button span {
@@ -233,6 +285,7 @@ body{
     opacity: 1;
     right: 0;
   }
+
   input.right{
     float:right;
     width: 200px;
