quick fix to html -CJG

--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -97,7 +97,7 @@
                 <h1>All Fans </h1>
                 <form method="post" action="/" id="allfanform">
                     <p><input class="allfaninput" type="text" name = "ALLFANS" value = "" placeholder="Enter desierd speed"></p>
-                    <p><input class="button" type = "submit" value="UPDATE ALL FANS" name="updatefan" form=allfanform/></p>
+                    <p><input class="button" type = "submit" value="UPDATE ALL FANS" name="updatefan" form="allfanform"/></p>
                 </form>
                 <p><input class="button" type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p>
             </div>
